<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raw_can_driver</name>
  <version>1.0.0</version>
  <description> Provides a simple CAN driver to send and receive raw CAN messages. </description>
  <maintainer email="zalan.demeter@humda.hu">Zalán Demeter</maintainer>
  <license file="LICENSE">Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>can_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
